--- a/P2/udagram-api/feed/.travis.yml
+++ b/P2/udagram-api/feed/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - echo "no tests"
 
 script:
+  - cd P2\udagram-api\feed
   - docker --version # print the version for logging
   - docker build -t feed-node .
   - docker tag feed-node "$DOCKER_USERNAME"/feed-node:latest
