--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "P2/udagram-api/feed-node"]
 	path = P2/udagram-api/feed-node
 	url = https://github.com/kin-cheung/feed-node.git
+[submodule "P2/udagram-api/user-node"]
+	path = P2/udagram-api/user-node
+	url = https://github.com/kin-cheung/user-node.git
+[submodule "P2/udagram-frontend"]
+	path = P2/udagram-frontend
+	url = https://github.com/kin-cheung/udagram-frontend.git
+
